--- a/app/sass/content/recipes-list.scss
+++ b/app/sass/content/recipes-list.scss
@@ -1,4 +1,3 @@
-
 /*______ Recipes list ______*/
 
 .recipes-list {
@@ -13,51 +12,52 @@
 		}
 		@media (min-width: $mob-s) {
 			padding-top: 50px;
-		};
+		}
 		@media (min-width: $tablet-w) {
 			padding-top: 70px;
 			padding-bottom: 40px;
-		};
+		}
 		&:nth-child(even) {
 			position: relative;
-    	background-color: #faf4ef;
-    	&:before,&:after {
-		    content: '';
-		    position: absolute;
-		    left: 0;
-		    width: 100%;
-		    height: 50px;
-		    background-repeat: repeat-x;
-		    background-size: 100%;
-		    z-index: 1;
-    	}
-    	&:before {
-		    background-position: 100% 100%;
-		    background-image: url(../img/ui/wave-top.png);
-		    top: -48px;
-    	}
-    	&:after {
+			background-color: #faf4ef;
+			&:before,
+			&:after {
+				content: "";
+				position: absolute;
+				left: 0;
+				width: 100%;
+				height: 50px;
+				background-repeat: repeat-x;
+				background-size: 100%;
+				z-index: 1;
+			}
+			&:before {
+				background-position: 100% 100%;
+				background-image: url(../img/ui/wave-top.png);
+				top: -48px;
+			}
+			&:after {
 				background-position: 0 0;
 				bottom: -48px;
 				background-image: url(../img/ui/wave-bottom.png);
-    	}
-    	a {
-    		position: relative;
-    		&:before {
-			    content: '';
-			    position: absolute;
-			    top: 0;
-			    left: 0;
-			    display: block;
-			    width: 100%;
-			    height: 100%;
-			    background-color: #faf4ef;
-			    z-index: -1;
-    		}
-    		img {
-    			mix-blend-mode: multiply;
-    		}
-    	}
+			}
+			a {
+				position: relative;
+				&:before {
+					content: "";
+					position: absolute;
+					top: 0;
+					left: 0;
+					display: block;
+					width: 100%;
+					height: 100%;
+					background-color: #faf4ef;
+					z-index: -1;
+				}
+				img {
+					mix-blend-mode: multiply;
+				}
+			}
 		}
 		&__inner {
 			max-width: 960px;
@@ -65,8 +65,8 @@
 			padding: 0 15px;
 		}
 		img {
-	    max-width: 100%;
-	    max-height: 100%;
+			max-width: 100%;
+			max-height: 100%;
 		}
 	}
 	.recipe-img {
@@ -83,16 +83,14 @@
 
 /*______ End Recipes list ______*/
 
-
-
-
 /*______ Recipes posts ______*/
 
 .recipes-section {
 	position: relative;
 	border-bottom: 1px solid #d4d4d4;
-	&:before,&:after {
-		content: '';
+	&:before,
+	&:after {
+		content: "";
 		position: absolute;
 		bottom: -1px;
 		display: block;
@@ -111,10 +109,10 @@
 	}
 	@media (min-width: $tablet-w) {
 		padding-bottom: 90px;
-	};
+	}
 	@media (min-width: $desk-w) {
 		padding-bottom: 130px;
-	};
+	}
 }
 
 .recipes-row {
@@ -123,48 +121,48 @@
 	}
 	@media (min-width: $mob-s) {
 		margin-bottom: 30px;
-	};
+	}
 	@media (min-width: $tablet-w) {
 		margin-bottom: 60px;
-	};
+	}
 	@media (min-width: $tablet-w) {
 		margin-bottom: 90px;
-	};
+	}
 	&:last-child {
 		margin-bottom: 0;
 	}
 }
 
 .recipe-post {
-	max-width: 320px;	
+	max-width: 320px;
 	@media (min-width: $mob-xs) and (max-width: 959px) {
 		margin: 0 auto 30px !important;
 	}
 	@media (min-width: $tablet-w) {
 		margin: 0;
-	};
+	}
 	.recipe-post__img {
 		position: relative;
 		margin-bottom: 22px;
 		max-width: 314px;
 		height: 0;
 		padding-top: 97%;
-			&:before {
-				content: '';
-				position: absolute;
-				top: 50%;
-				right: -37%;
+		&:before {
+			content: "";
+			position: absolute;
+			top: 50%;
+			right: -37%;
+			display: block;
+			width: 105px;
+			height: 20px;
+			background-position: 0 center;
+			background-repeat: no-repeat;
+			background-size: contain;
+			display: none;
+			@media (min-width: 1300px) {
 				display: block;
-				width: 105px;
-				height: 20px;
-				background-position: 0 center;
-				background-repeat: no-repeat;
-				background-size: contain;
-				display: none;
-				@media (min-width: 1300px) {
-					display: block;
-				};
 			}
+		}
 		img {
 			position: absolute;
 			top: 50%;
@@ -196,82 +194,83 @@
 	&--ellipse-1 {
 		.recipe-post__img {
 			&:before {
-				background-image: url('../img/icon-svg/short-line-1.svg');
+				background-image: url("../img/icon-svg/short-line-1.svg");
 			}
 		}
 		img {
-			mask-image: url('../img/icon-svg/ellipse-2.svg');
+			mask-image: url("../img/icon-svg/ellipse-2.svg");
 		}
 	}
 	&--ellipse-2 {
 		img {
-			mask-image: url('../img/icon-svg/ellipse-3.svg');
+			mask-image: url("../img/icon-svg/ellipse-3.svg");
 		}
 		.recipe-post__img {
 			&:before {
-				background-image: url('../img/icon-svg/short-line-2.svg');
+				background-image: url("../img/icon-svg/short-line-2.svg");
 			}
 		}
 	}
 	&--ellipse-3 {
 		img {
-			mask-image: url('../img/icon-svg/ellipse-9.svg');
+			mask-image: url("../img/icon-svg/ellipse-9.svg");
 		}
 	}
 	&--ellipse-4 {
 		img {
-			mask-image: url('../img/icon-svg/ellipse-1.svg');
+			mask-image: url("../img/icon-svg/ellipse-1.svg");
 		}
 	}
 	&--ellipse-5 {
 		.recipe-post__img {
 			&:before {
-				background-image: url('../img/icon-svg/short-line-3.svg');
+				background-image: url("../img/icon-svg/short-line-3.svg");
 			}
 		}
 		img {
-			mask-image: url('../img/icon-svg/ellipse-1.svg');
+			mask-image: url("../img/icon-svg/ellipse-1.svg");
 		}
 	}
 	&--ellipse-6 {
 		.recipe-post__img {
 			&:before {
-				background-image: url('../img/icon-svg/short-line-4.svg');
+				background-image: url("../img/icon-svg/short-line-4.svg");
 			}
 		}
 		img {
-			mask-image: url('../img/icon-svg/ellipse-2.svg');
+			mask-image: url("../img/icon-svg/ellipse-2.svg");
 		}
 	}
 	&--ellipse-7 {
 		img {
-			mask-image: url('../img/icon-svg/ellipse-3.svg');
+			mask-image: url("../img/icon-svg/ellipse-3.svg");
 		}
 	}
 }
-
 
 .recipe-post {
 	&--big {
 		max-width: 100%;
 		.recipe-post__img {
 			margin: 0;
-			padding-top: 15px;
+			padding-top: 75%;
 			max-width: 534px;
 			max-height: 494px;
 			text-align: center;
 			height: auto;
 			img {
-				position: relative;
+				position: absolute;
+				top: 15px;
+				left: 50%;
 				max-width: 100%;
 				max-height: 462px;
-				transform: translateY(0);
+				transform: translate(-50%, 0);
 			}
 			&:before {
 				display: none !important;
 			}
 			&:after {
-				content: '';
+				content: "";
 				position: absolute;
 				top: 0;
 				right: 0;
@@ -301,30 +300,29 @@
 				br {
 					display: block;
 				}
-			};
+			}
 			a {
 				font-size: 30px;
 				line-height: 40px;
 				background-color: $yellow;
 				padding: 4px 0;
-				box-shadow: -10px 0 0 $yellow, 
-										10px 0 0 $yellow;
+				box-shadow: -10px 0 0 $yellow, 10px 0 0 $yellow;
 			}
 		}
 		.recipe-post__content {
-	    position: relative;
-	    margin-top: -82px;
-	    z-index: 50;
-	    @media (min-width: $mob-xs) {
-	    	margin: 0 auto;
-	    }
-	    @media (min-width: $tablet-w) {
-	    	margin: -82px 0 0;
-	    };
-	    .green-link {
-	    	margin-top: 24px;
-	    	display: inline-block;
-	    }
+			position: relative;
+			margin-top: -82px;
+			z-index: 50;
+			@media (min-width: $mob-xs) {
+				margin: 0 auto;
+			}
+			@media (min-width: $tablet-w) {
+				margin: -82px 0 0;
+			}
+			.green-link {
+				margin-top: 24px;
+				display: inline-block;
+			}
 		}
 		.recipe-post__short-desc {
 			max-width: 470px;
@@ -332,31 +330,31 @@
 		&.recipe-post--ellipse-1 {
 			.recipe-post__img {
 				&:after {
-					background-image: url('../img/icon-svg/large-ellipse-5.svg');
+					background-image: url("../img/icon-svg/large-ellipse-5.svg");
 				}
 			}
 			img {
-				mask-image: url('../img/icon-svg/ellipse-7.svg');
+				mask-image: url("../img/icon-svg/ellipse-7.svg");
 			}
 		}
 		&.recipe-post--ellipse-2 {
 			.recipe-post__img {
 				&:after {
-					background-image: url('../img/icon-svg/large-ellipse-6.svg');
+					background-image: url("../img/icon-svg/large-ellipse-6.svg");
 				}
 			}
 			img {
-				mask-image: url('../img/icon-svg/ellipse-2.svg');
+				mask-image: url("../img/icon-svg/ellipse-2.svg");
 			}
 		}
 		&.recipe-post--ellipse-3 {
 			.recipe-post__img {
 				&:after {
-					background-image: url('../img/icon-svg/large-ellipse-7.svg');
+					background-image: url("../img/icon-svg/large-ellipse-7.svg");
 				}
 			}
 			img {
-				mask-image: url('../img/icon-svg/medium-ellipse-3.svg');
+				mask-image: url("../img/icon-svg/medium-ellipse-3.svg");
 			}
 		}
 	}
