--- a/app/templates/facts-detail.twig
+++ b/app/templates/facts-detail.twig
@@ -15,15 +15,9 @@
 
 				<div class="recipe-detail__text">
 					<div class="uk-grid">
-
-
-						<div class="uk-width-1-2@s">
-							<div class="recipe-detail__composition">
-								<h3 class="title-h3">Как на самом деле ?</h3>
-							</div>
-						</div>
-						<div class="uk-width-1-2@s">
+						<div class="uk-width-1-1">
 							<div class="recipe-detail__desc">
+								<h3 class="title-h3">Как на самом деле ?</h3>
 								<p>
 									Действительно по несушке можно понять, какого цвета будут снесенные ею яйца, но обращать внимание нужно не на цвет оперения.
 								</p>
