--- a/app/templates/recipes.twig
+++ b/app/templates/recipes.twig
@@ -4,7 +4,7 @@
 {% block content %}
 
 	<main class="main-container">
-			
+
 		<section class="content-section">
 			<div class="uk-container">
 				<h1 class="title-h1 uk-text-center">Рецепты</h1>
@@ -12,200 +12,202 @@
 				<!-- begin recipes-section -->
 				<section class="recipes-section" uk-scrollspy="target: .recipe-post; cls: slide-right; delay: 300">
 
-						<div class="recipes-row">
-						  <div class="uk-grid">
-						  	<div class="uk-width-1-2@s">
+					<div class="recipes-row">
+						<div class="uk-grid">
+							<div class="uk-width-1-2@s">
 
-						  		<article class="recipe-post recipe-post--big recipe-post--ellipse-1">
-						  			<figure class="recipe-post__img">
-						  				<img data-src="img/media/recipes/recipe-post-490x480-1.png" alt="Вкусный омлет" uk-img>
-						  			</figure>
-						  			<div class="recipe-post__content">
-											<div class="recipe-post__title">
-												<a href="">Вкусный омлет с брынзой <br> и зеленью</a>
-											</div>
-											<div class="recipe-post__short-desc">
-												Яйца, ветчина, сыр твёрдый, масло растительное, зелень петрушки
-											</div>
-											<a href="" class="green-link">Подробнее</a>
-						  			</div>
-						  		</article>
+								<article class="recipe-post recipe-post--big recipe-post--ellipse-1">
+									<figure class="recipe-post__img">
+										<img data-src="img/media/recipes/recipe-2.png" alt="Вкусный омлет" uk-img>
+									</figure>
+									<div class="recipe-post__content">
+										<div class="recipe-post__title">
+											<a href="">Салат с красной рыбой и яйцом</a>
+										</div>
+										<div class="recipe-post__short-desc">
+											Куриное яйцо, красная рыба, огурец, помидор, салатный микс, оливковое масло, лимонный сок
+										</div>
+										<a href="" class="green-link">Подробнее</a>
+									</div>
+								</article>
 
-						  	</div>
-						  	<div class="uk-width-1-2@s">
+							</div>
+							<div class="uk-width-1-2@s">
 
-						  		<article class="recipe-post recipe-post--big recipe-post--ellipse-2">
-						  			<figure class="recipe-post__img">
-						  				<img data-src="img/media/recipes/recipe-post-490x480-2.png" alt="Салат весенний " uk-img>
-						  			</figure>
-						  			<div class="recipe-post__content">
-											<div class="recipe-post__title">
-												<a href="">Салат Весенний из яйца, <br> макарон и моркови</a>
-											</div>
-											<div class="recipe-post__short-desc">
-												Картофель, яйца, масло растительное, лук зелёный, соль
-											</div>
-											<a href="" class="green-link">Подробнее</a>
-						  			</div>
-						  		</article>
+								<article class="recipe-post recipe-post--big recipe-post--ellipse-2">
+									<figure class="recipe-post__img">
+										<img data-src="img/media/recipes/recipe-9.png" alt="Салат весенний " uk-img>
+									</figure>
+									<div class="recipe-post__content">
+										<div class="recipe-post__title">
+											<a href="">Сэндвич с авокадо</a>
+										</div>
+										<div class="recipe-post__short-desc">
+											Вареное яйцо, хлеб, авокадо, лимонный сок, соль, перец, чеснок
+										</div>
+										<a href="" class="green-link">Подробнее</a>
+									</div>
+								</article>
 
-						  	</div>
-						  </div>
-						</div>
-
-						<div class="recipes-row">
-						  <div class="uk-grid">
-						  	<div class="uk-width-1-2@s uk-width-1-3@m">
-
-						  		<article class="recipe-post recipe-post--ellipse-1">
-						  			<figure class="recipe-post__img">
-						  				<img data-src="img/media/recipes/recipe-post-small-314x302-1.png" alt="Салат весенний" uk-img>
-						  			</figure>
-						  			<div class="recipe-post__content">
-											<div class="recipe-post__title">
-												<a href="">Яичные конвертики с сыром и ветчиной</a>
-											</div>
-											<div class="recipe-post__short-desc">
-												Описание ключевых ингредиентов, может быть в несколько строк
-											</div>
-						  			</div>
-						  		</article>
-
-						  	</div>
-						  	<div class="uk-width-1-2@s uk-width-1-3@m">
-
-						  		<article class="recipe-post recipe-post--ellipse-2">
-						  			<figure class="recipe-post__img">
-						  				<img data-src="img/media/recipes/recipe-post-small-314x302-2.png" alt="Салат весенний" uk-img>
-						  			</figure>
-						  			<div class="recipe-post__content">
-											<div class="recipe-post__title">
-												<a href="">Омлет с картофелем</a>
-											</div>
-											<div class="recipe-post__short-desc">
-												Картофель, яйца, масло растительное, лук зелёный, соль
-											</div>
-						  			</div>
-						  		</article>
-
-						  	</div>
-						  	<div class="uk-width-1-2@s uk-width-1-3@m">
-
-						  		<article class="recipe-post recipe-post--ellipse-3">
-						  			<figure class="recipe-post__img">
-						  				<img data-src="img/media/recipes/recipe-post-small-314x302-3.png" alt="Салат весенний" uk-img>
-						  			</figure>
-						  			<div class="recipe-post__content">
-											<div class="recipe-post__title">
-												<a href="">Яичный ролл (на завтрак)</a>
-											</div>
-											<div class="recipe-post__short-desc">
-												Хлеб белый, яйца, соль, перец, масло растительное
-											</div>
-						  			</div>
-						  		</article>
-
-						  	</div>
-						  </div>
-						</div>
-
-						<div class="recipes-row">
-							<div class="uk-grid uk-flex uk-flex-middle">
-								<div class="uk-width-1-2@s">
-									
-						  		<article class="recipe-post recipe-post--ellipse-4 uk-margin-auto">
-						  			<figure class="recipe-post__img">
-						  				<img data-src="img/media/recipes/recipe-post-small-314x302-4.png" alt="Салат весенний" uk-img>
-						  			</figure>
-						  			<div class="recipe-post__content">
-											<div class="recipe-post__title">
-												<a href="">Яичница в хлебе</a>
-											</div>
-											<div class="recipe-post__short-desc">
-												Хлеб белый, яйца, соль, перец, масло растительное
-											</div>
-						  			</div>
-						  		</article>
-
-								</div>
-								<div class="uk-width-1-2@s">
-									
-						  		<article class="recipe-post recipe-post--big recipe-post--ellipse-3">
-						  			<figure class="recipe-post__img">
-						  				<img data-src="img/media/recipes/recipe-post-490x480-3.png" alt="Вкусный омлет" uk-img>
-						  			</figure>
-						  			<div class="recipe-post__content">
-											<div class="recipe-post__title">
-												<a href="">Ленивая пицца на сковороде, <br> с помидорами, сыром и яичницей</a>
-											</div>
-											<div class="recipe-post__short-desc">
-												Мука пшеничная, сметана, майонез, яйца, соль, сыр твёрдый, помидоры, яйца, кетчуп, соль, перец чёрный молотый, масло растительное
-											</div>
-											<a href="" class="green-link">Подробнее</a>
-						  			</div>
-						  		</article>
-
-								</div>
 							</div>
 						</div>
+					</div>
 
-						<div class="recipes-row">
-						  <div class="uk-grid">
-						  	<div class="uk-width-1-2@s uk-width-1-3@m">
+					<div class="recipes-row">
+						<div class="uk-grid">
+							<div class="uk-width-1-2@s uk-width-1-3@m">
 
-						  		<article class="recipe-post recipe-post--ellipse-5">
-						  			<figure class="recipe-post__img">
-						  				<img data-src="img/media/recipes/recipe-post-small-314x302-5.png" alt="Салат весенний" uk-img>
-						  			</figure>
-						  			<div class="recipe-post__content">
-											<div class="recipe-post__title">
-												<a href="">Яичные котлеты по-карельски</a>
-											</div>
-											<div class="recipe-post__short-desc">
-												Яйца, крупа манная, вода, соль, перец чёрный молотый, сухари панировочные
-											</div>
-						  			</div>
-						  		</article>
+								<article class="recipe-post recipe-post--ellipse-1">
+									<figure class="recipe-post__img">
+										<img data-src="img/media/recipes/recipe-1.png" alt="Салат весенний" uk-img>
+									</figure>
+									<div class="recipe-post__content">
+										<div class="recipe-post__title">
+											<a href="">Яйца скрэмбл с ветчиной и сыром</a>
+										</div>
+										<div class="recipe-post__short-desc">
+											Куриное яйцо, молоко, растительное масло, ветчина, сыр твердый, соль, перец
+										</div>
+									</div>
+								</article>
 
-						  	</div>
-						  	<div class="uk-width-1-2@s uk-width-1-3@m">
+							</div>
+							<div class="uk-width-1-2@s uk-width-1-3@m">
 
-						  		<article class="recipe-post recipe-post--ellipse-6">
-						  			<figure class="recipe-post__img">
-						  				<img data-src="img/media/recipes/recipe-post-small-314x302-6.png" alt="Салат весенний" uk-img>
-						  			</figure>
-						  			<div class="recipe-post__content">
-											<div class="recipe-post__title">
-												<a href="">Яичный рулет с колбасой, помидорами и зеленью</a>
-											</div>
-											<div class="recipe-post__short-desc">
-												Яйца, помидоры, колбаса вареная, зелень петрушки, соль, перец чёрный молотый, масло растительное
-											</div>
-						  			</div>
-						  		</article>
+								<article class="recipe-post recipe-post--ellipse-2">
+									<figure class="recipe-post__img">
+										<img data-src="img/media/recipes/recipe-4.png" alt="Салат весенний" uk-img>
+									</figure>
+									<div class="recipe-post__content">
+										<div class="recipe-post__title">
+											<a href="">Белковый омлет</a>
+										</div>
+										<div class="recipe-post__short-desc">
+											Яичный белок, молоко, укроп, соль, перец черный, масло сливочное
+										</div>
+									</div>
+								</article>
 
-						  	</div>
-						  	<div class="uk-width-1-2@s uk-width-1-3@m">
+							</div>
+							<div class="uk-width-1-2@s uk-width-1-3@m">
 
-						  		<article class="recipe-post recipe-post--ellipse-7">
-						  			<figure class="recipe-post__img">
-						  				<img data-src="img/media/recipes/recipe-post-small-314x302-7.png" alt="Салат весенний" uk-img>
-						  			</figure>
-						  			<div class="recipe-post__content">
-											<div class="recipe-post__title">
-												<a href="">Яйца пашот</a>
-											</div>
-											<div class="recipe-post__short-desc">
-												Яйца, масло оливковое
-											</div>
-						  			</div>
-						  		</article>
+								<article class="recipe-post recipe-post--ellipse-3">
+									<figure class="recipe-post__img">
+										<img data-src="img/media/recipes/recipe-8.png" alt="Салат весенний" uk-img>
+									</figure>
+									<div class="recipe-post__content">
+										<div class="recipe-post__title">
+											<a href="">Французские тосты</a>
+										</div>
+										<div class="recipe-post__short-desc">
+											Куриное яйцо, сахар, соль, молоко, белый хлеб, сливочное масло
+										</div>
+									</div>
+								</article>
 
-						  	</div>
-						  </div>
+							</div>
 						</div>
+					</div>
 
-				</section><!-- end recipes-section -->
+					<div class="recipes-row">
+						<div class="uk-grid uk-flex uk-flex-middle">
+							<div class="uk-width-1-2@s">
+
+								<article class="recipe-post recipe-post--ellipse-4 uk-margin-auto">
+									<figure class="recipe-post__img">
+										<img data-src="img/media/recipes/recipe-6.png" alt="Салат весенний" uk-img>
+									</figure>
+									<div class="recipe-post__content">
+										<div class="recipe-post__title">
+											<a href="">Домашний майонез за 5 минут</a>
+										</div>
+										<div class="recipe-post__short-desc">
+											Куриное яйцо, подсолнечное масло, сахар, соль, яблочный или винный уксус, горчица
+										</div>
+									</div>
+								</article>
+
+							</div>
+							<div class="uk-width-1-2@s">
+
+								<article class="recipe-post recipe-post--big recipe-post--ellipse-3">
+									<figure class="recipe-post__img">
+										<img data-src="img/media/recipes/recipe-7.png" alt="Вкусный омлет" uk-img>
+									</figure>
+									<div class="recipe-post__content">
+										<div class="recipe-post__title">
+											<a href="">
+												Салат с яйцом и авокадо</a>
+										</div>
+										<div class="recipe-post__short-desc">
+											Куриное яйцо, авокадо, салатный микс, подсолнечное/оливковое масло, соль, перец, лимонный сок
+										</div>
+										<a href="" class="green-link">Подробнее</a>
+									</div>
+								</article>
+
+							</div>
+						</div>
+					</div>
+
+					<div class="recipes-row">
+						<div class="uk-grid">
+							<div class="uk-width-1-2@s uk-width-1-3@m">
+
+								<article class="recipe-post recipe-post--ellipse-5">
+									<figure class="recipe-post__img">
+										<img data-src="img/media/recipes/recipe-10.png" alt="Салат весенний" uk-img>
+									</figure>
+									<div class="recipe-post__content">
+										<div class="recipe-post__title">
+											<a href="">Яйцо-пашот</a>
+										</div>
+										<div class="recipe-post__short-desc">
+											Куриное яйцо, вода, соль, уксус
+										</div>
+									</div>
+								</article>
+
+							</div>
+							<div class="uk-width-1-2@s uk-width-1-3@m">
+
+								<article class="recipe-post recipe-post--ellipse-6">
+									<figure class="recipe-post__img">
+										<img data-src="img/media/recipes/recipe-3.png" alt="Салат весенний" uk-img>
+									</figure>
+									<div class="recipe-post__content">
+										<div class="recipe-post__title">
+											<a href="">Творожный омлет</a>
+										</div>
+										<div class="recipe-post__short-desc">
+											Куриное яйцо, творог, молоко, зелень, соль, перец черный, масло сливочное
+										</div>
+									</div>
+								</article>
+
+							</div>
+							<div class="uk-width-1-2@s uk-width-1-3@m">
+
+								<article class="recipe-post recipe-post--ellipse-7">
+									<figure class="recipe-post__img">
+										<img data-src="img/media/recipes/recipe-5.png" alt="Салат весенний" uk-img>
+									</figure>
+									<div class="recipe-post__content">
+										<div class="recipe-post__title">
+											<a href="">Тот самый завтрак из детства</a>
+										</div>
+										<div class="recipe-post__short-desc">
+											Куриное яйцо, сосиски, зелень, соль, перец черный, масло сливочное
+										</div>
+									</div>
+								</article>
+
+							</div>
+						</div>
+					</div>
+
+				</section>
+				<!-- end recipes-section -->
 
 			</div>
 
