--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -20,6 +20,7 @@
 @import "content/recipes-list";
 @import "content/recipes-detail";
 @import "content/tabs";
+@import "content/pagination";
 @import "content/timer";
 @import "content/content";
 @import "footer/footer";
