--- a/app/templates/facts.twig
+++ b/app/templates/facts.twig
@@ -12,174 +12,178 @@
 				<!-- begin recipes-section -->
 				<section class="recipes-section" uk-scrollspy="target: .recipe-post; cls: slide-right; delay: 300">
 
-					<div class="recipes-row">
-						<div class="uk-grid">
-							<div class="uk-width-1-2@s">
+					<div class="recipes-section__inner">
+						<div class="recipes-row">
+							<div class="uk-grid">
+								<div class="uk-width-1-2@s">
 
-								<article class="recipe-post recipe-post--big recipe-post--ellipse-1">
-									<figure class="recipe-post__img">
-										<img data-src="img/media/facts/facts-5.png" alt="Вкусный омлет" uk-img>
-									</figure>
-									<div class="recipe-post__content">
-										<div class="recipe-post__title">
-											<a href="">Можно ли определить цвет скорлупы яиц по курице?</a>
+									<article class="recipe-post recipe-post--big recipe-post--ellipse-1">
+										<figure class="recipe-post__img">
+											<img data-src="img/media/facts/facts-5.png" alt="Вкусный омлет" uk-img>
+										</figure>
+										<div class="recipe-post__content">
+											<div class="recipe-post__title">
+												<a href="">Можно ли определить цвет скорлупы яиц по курице?</a>
+											</div>
+											<a href="" class="green-link">Подробнее</a>
 										</div>
-										<a href="" class="green-link">Подробнее</a>
-									</div>
-								</article>
+									</article>
 
+								</div>
+								<div class="uk-width-1-2@s">
+
+									<article class="recipe-post recipe-post--big recipe-post--ellipse-2">
+										<figure class="recipe-post__img">
+											<img data-src="img/media/facts/facts-8.png" alt="Салат весенний " uk-img>
+										</figure>
+										<div class="recipe-post__content">
+											<div class="recipe-post__title">
+												<a href="">Как формируется яйцо в курице?</a>
+											</div>
+											<a href="" class="green-link">Подробнее</a>
+										</div>
+									</article>
+
+								</div>
 							</div>
-							<div class="uk-width-1-2@s">
+						</div>
 
-								<article class="recipe-post recipe-post--big recipe-post--ellipse-2">
-									<figure class="recipe-post__img">
-										<img data-src="img/media/facts/facts-8.png" alt="Салат весенний " uk-img>
-									</figure>
-									<div class="recipe-post__content">
-										<div class="recipe-post__title">
-											<a href="">Как формируется яйцо в курице?</a>
+						<div class="recipes-row">
+							<div class="uk-grid">
+								<div class="uk-width-1-2@s uk-width-1-3@m">
+
+									<article class="recipe-post recipe-post--ellipse-1">
+										<figure class="recipe-post__img">
+											<img data-src="img/media/facts/facts-3.png" alt="Салат весенний" uk-img>
+										</figure>
+										<div class="recipe-post__content">
+											<div class="recipe-post__title">
+												<a href="">Почему у куриного яйца такая форма?</a>
+											</div>
 										</div>
-										<a href="" class="green-link">Подробнее</a>
-									</div>
-								</article>
+									</article>
 
+								</div>
+								<div class="uk-width-1-2@s uk-width-1-3@m">
+
+									<article class="recipe-post recipe-post--ellipse-2">
+										<figure class="recipe-post__img">
+											<img data-src="img/media/facts/facts-9.png" alt="Салат весенний" uk-img>
+										</figure>
+										<div class="recipe-post__content">
+											<div class="recipe-post__title">
+												<a href="">У куриных яиц есть поры?</a>
+											</div>
+										</div>
+									</article>
+
+								</div>
+								<div class="uk-width-1-2@s uk-width-1-3@m">
+
+									<article class="recipe-post recipe-post--ellipse-3">
+										<figure class="recipe-post__img">
+											<img data-src="img/media/facts/facts-7.png" alt="Салат весенний" uk-img>
+										</figure>
+										<div class="recipe-post__content">
+											<div class="recipe-post__title">
+												<a href="">
+													Можно ли мыть яйца перед длительным хранением?</a>
+											</div>
+										</div>
+									</article>
+
+								</div>
+							</div>
+						</div>
+
+						<div class="recipes-row">
+							<div class="uk-grid uk-flex uk-flex-middle">
+								<div class="uk-width-1-2@s">
+
+									<article class="recipe-post recipe-post--ellipse-4 uk-margin-auto">
+										<figure class="recipe-post__img">
+											<img data-src="img/media/facts/facts-2.png" alt="Салат весенний" uk-img>
+										</figure>
+										<div class="recipe-post__content">
+											<div class="recipe-post__title">
+												<a href="">Есть ли холестерин в яйцах?</a>
+											</div>
+										</div>
+									</article>
+
+								</div>
+								<div class="uk-width-1-2@s">
+
+									<article class="recipe-post recipe-post--big recipe-post--ellipse-3">
+										<figure class="recipe-post__img">
+											<img data-src="img/media/facts/facts-6.png" alt="Вкусный омлет" uk-img>
+										</figure>
+										<div class="recipe-post__content">
+											<div class="recipe-post__title">
+												<a href="">Влияет ли цвет скорлупы
+													<br>
+													на пользу яйца?</a>
+											</div>
+											<a href="" class="green-link">Подробнее</a>
+										</div>
+									</article>
+
+								</div>
+							</div>
+						</div>
+
+						<div class="recipes-row">
+							<div class="uk-grid">
+								<div class="uk-width-1-2@s uk-width-1-3@m">
+
+									<article class="recipe-post recipe-post--ellipse-5">
+										<figure class="recipe-post__img">
+											<img data-src="img/media/facts/facts-10.png" alt="Салат весенний" uk-img>
+										</figure>
+										<div class="recipe-post__content">
+											<div class="recipe-post__title">
+												<a href="">
+													Сколько категорий куриных яиц существует?</a>
+											</div>
+										</div>
+									</article>
+
+								</div>
+								<div class="uk-width-1-2@s uk-width-1-3@m">
+
+									<article class="recipe-post recipe-post--ellipse-6">
+										<figure class="recipe-post__img">
+											<img data-src="img/media/facts/facts-4.png" alt="Салат весенний" uk-img>
+										</figure>
+										<div class="recipe-post__content">
+											<div class="recipe-post__title">
+												<a href="">
+													О чем говорит яркий желток?</a>
+											</div>
+										</div>
+									</article>
+
+								</div>
+								<div class="uk-width-1-2@s uk-width-1-3@m">
+
+									<article class="recipe-post recipe-post--ellipse-7">
+										<figure class="recipe-post__img">
+											<img data-src="img/media/facts/facts-1.png" alt="Салат весенний" uk-img>
+										</figure>
+										<div class="recipe-post__content">
+											<div class="recipe-post__title">
+												<a href="">
+													Зачем курице крылья?</a>
+											</div>
+										</div>
+									</article>
+
+								</div>
 							</div>
 						</div>
 					</div>
 
-					<div class="recipes-row">
-						<div class="uk-grid">
-							<div class="uk-width-1-2@s uk-width-1-3@m">
-
-								<article class="recipe-post recipe-post--ellipse-1">
-									<figure class="recipe-post__img">
-										<img data-src="img/media/facts/facts-3.png" alt="Салат весенний" uk-img>
-									</figure>
-									<div class="recipe-post__content">
-										<div class="recipe-post__title">
-											<a href="">Почему у куриного яйца такая форма?</a>
-										</div>
-									</div>
-								</article>
-
-							</div>
-							<div class="uk-width-1-2@s uk-width-1-3@m">
-
-								<article class="recipe-post recipe-post--ellipse-2">
-									<figure class="recipe-post__img">
-										<img data-src="img/media/facts/facts-9.png" alt="Салат весенний" uk-img>
-									</figure>
-									<div class="recipe-post__content">
-										<div class="recipe-post__title">
-											<a href="">У куриных яиц есть поры?</a>
-										</div>
-									</div>
-								</article>
-
-							</div>
-							<div class="uk-width-1-2@s uk-width-1-3@m">
-
-								<article class="recipe-post recipe-post--ellipse-3">
-									<figure class="recipe-post__img">
-										<img data-src="img/media/facts/facts-7.png" alt="Салат весенний" uk-img>
-									</figure>
-									<div class="recipe-post__content">
-										<div class="recipe-post__title">
-											<a href="">
-												Можно ли мыть яйца перед длительным хранением?</a>
-										</div>
-									</div>
-								</article>
-
-							</div>
-						</div>
-					</div>
-
-					<div class="recipes-row">
-						<div class="uk-grid uk-flex uk-flex-middle">
-							<div class="uk-width-1-2@s">
-
-								<article class="recipe-post recipe-post--ellipse-4 uk-margin-auto">
-									<figure class="recipe-post__img">
-										<img data-src="img/media/facts/facts-2.png" alt="Салат весенний" uk-img>
-									</figure>
-									<div class="recipe-post__content">
-										<div class="recipe-post__title">
-											<a href="">Есть ли холестерин в яйцах?</a>
-										</div>
-									</div>
-								</article>
-
-							</div>
-							<div class="uk-width-1-2@s">
-
-								<article class="recipe-post recipe-post--big recipe-post--ellipse-3">
-									<figure class="recipe-post__img">
-										<img data-src="img/media/facts/facts-6.png" alt="Вкусный омлет" uk-img>
-									</figure>
-									<div class="recipe-post__content">
-										<div class="recipe-post__title">
-											<a href="">Влияет ли цвет скорлупы
-												<br>
-												на пользу яйца?</a>
-										</div>
-										<a href="" class="green-link">Подробнее</a>
-									</div>
-								</article>
-
-							</div>
-						</div>
-					</div>
-
-					<div class="recipes-row">
-						<div class="uk-grid">
-							<div class="uk-width-1-2@s uk-width-1-3@m">
-
-								<article class="recipe-post recipe-post--ellipse-5">
-									<figure class="recipe-post__img">
-										<img data-src="img/media/facts/facts-10.png" alt="Салат весенний" uk-img>
-									</figure>
-									<div class="recipe-post__content">
-										<div class="recipe-post__title">
-											<a href="">
-												Сколько категорий куриных яиц существует?</a>
-										</div>
-									</div>
-								</article>
-
-							</div>
-							<div class="uk-width-1-2@s uk-width-1-3@m">
-
-								<article class="recipe-post recipe-post--ellipse-6">
-									<figure class="recipe-post__img">
-										<img data-src="img/media/facts/facts-4.png" alt="Салат весенний" uk-img>
-									</figure>
-									<div class="recipe-post__content">
-										<div class="recipe-post__title">
-											<a href="">
-												О чем говорит яркий желток?</a>
-										</div>
-									</div>
-								</article>
-
-							</div>
-							<div class="uk-width-1-2@s uk-width-1-3@m">
-
-								<article class="recipe-post recipe-post--ellipse-7">
-									<figure class="recipe-post__img">
-										<img data-src="img/media/facts/facts-1.png" alt="Салат весенний" uk-img>
-									</figure>
-									<div class="recipe-post__content">
-										<div class="recipe-post__title">
-											<a href="">
-												Зачем курице крылья?</a>
-										</div>
-									</div>
-								</article>
-
-							</div>
-						</div>
-					</div>
+					{% include "includes/components/pagination.twig"  %}
 
 				</section>
 				<!-- end recipes-section -->
