--- a/app/templates/recipes.twig
+++ b/app/templates/recipes.twig
@@ -12,199 +12,203 @@
 				<!-- begin recipes-section -->
 				<section class="recipes-section" uk-scrollspy="target: .recipe-post; cls: slide-right; delay: 300">
 
-					<div class="recipes-row">
-						<div class="uk-grid">
-							<div class="uk-width-1-2@s">
+					<div class="recipes-section__inner">
+						<div class="recipes-row">
+							<div class="uk-grid">
+								<div class="uk-width-1-2@s">
 
-								<article class="recipe-post recipe-post--big recipe-post--ellipse-1">
-									<figure class="recipe-post__img">
-										<img data-src="img/media/recipes/recipe-2.png" alt="Вкусный омлет" uk-img>
-									</figure>
-									<div class="recipe-post__content">
-										<div class="recipe-post__title">
-											<a href="">Салат с красной рыбой и яйцом</a>
+									<article class="recipe-post recipe-post--big recipe-post--ellipse-1">
+										<figure class="recipe-post__img">
+											<img data-src="img/media/recipes/recipe-2.png" alt="Вкусный омлет" uk-img>
+										</figure>
+										<div class="recipe-post__content">
+											<div class="recipe-post__title">
+												<a href="">Салат с красной рыбой и яйцом</a>
+											</div>
+											<div class="recipe-post__short-desc">
+												Куриное яйцо, красная рыба, огурец, помидор, салатный микс, оливковое масло, лимонный сок
+											</div>
+											<a href="" class="green-link">Подробнее</a>
 										</div>
-										<div class="recipe-post__short-desc">
-											Куриное яйцо, красная рыба, огурец, помидор, салатный микс, оливковое масло, лимонный сок
-										</div>
-										<a href="" class="green-link">Подробнее</a>
-									</div>
-								</article>
+									</article>
 
+								</div>
+								<div class="uk-width-1-2@s">
+
+									<article class="recipe-post recipe-post--big recipe-post--ellipse-2">
+										<figure class="recipe-post__img">
+											<img data-src="img/media/recipes/recipe-9.png" alt="Салат весенний " uk-img>
+										</figure>
+										<div class="recipe-post__content">
+											<div class="recipe-post__title">
+												<a href="">Сэндвич с авокадо</a>
+											</div>
+											<div class="recipe-post__short-desc">
+												Вареное яйцо, хлеб, авокадо, лимонный сок, соль, перец, чеснок
+											</div>
+											<a href="" class="green-link">Подробнее</a>
+										</div>
+									</article>
+
+								</div>
 							</div>
-							<div class="uk-width-1-2@s">
+						</div>
 
-								<article class="recipe-post recipe-post--big recipe-post--ellipse-2">
-									<figure class="recipe-post__img">
-										<img data-src="img/media/recipes/recipe-9.png" alt="Салат весенний " uk-img>
-									</figure>
-									<div class="recipe-post__content">
-										<div class="recipe-post__title">
-											<a href="">Сэндвич с авокадо</a>
-										</div>
-										<div class="recipe-post__short-desc">
-											Вареное яйцо, хлеб, авокадо, лимонный сок, соль, перец, чеснок
-										</div>
-										<a href="" class="green-link">Подробнее</a>
-									</div>
-								</article>
+						<div class="recipes-row">
+							<div class="uk-grid">
+								<div class="uk-width-1-2@s uk-width-1-3@m">
 
+									<article class="recipe-post recipe-post--ellipse-1">
+										<figure class="recipe-post__img">
+											<img data-src="img/media/recipes/recipe-1.png" alt="Салат весенний" uk-img>
+										</figure>
+										<div class="recipe-post__content">
+											<div class="recipe-post__title">
+												<a href="">Яйца скрэмбл с ветчиной и сыром</a>
+											</div>
+											<div class="recipe-post__short-desc">
+												Куриное яйцо, молоко, растительное масло, ветчина, сыр твердый, соль, перец
+											</div>
+										</div>
+									</article>
+
+								</div>
+								<div class="uk-width-1-2@s uk-width-1-3@m">
+
+									<article class="recipe-post recipe-post--ellipse-2">
+										<figure class="recipe-post__img">
+											<img data-src="img/media/recipes/recipe-4.png" alt="Салат весенний" uk-img>
+										</figure>
+										<div class="recipe-post__content">
+											<div class="recipe-post__title">
+												<a href="">Белковый омлет</a>
+											</div>
+											<div class="recipe-post__short-desc">
+												Яичный белок, молоко, укроп, соль, перец черный, масло сливочное
+											</div>
+										</div>
+									</article>
+
+								</div>
+								<div class="uk-width-1-2@s uk-width-1-3@m">
+
+									<article class="recipe-post recipe-post--ellipse-3">
+										<figure class="recipe-post__img">
+											<img data-src="img/media/recipes/recipe-8.png" alt="Салат весенний" uk-img>
+										</figure>
+										<div class="recipe-post__content">
+											<div class="recipe-post__title">
+												<a href="">Французские тосты</a>
+											</div>
+											<div class="recipe-post__short-desc">
+												Куриное яйцо, сахар, соль, молоко, белый хлеб, сливочное масло
+											</div>
+										</div>
+									</article>
+
+								</div>
+							</div>
+						</div>
+
+						<div class="recipes-row">
+							<div class="uk-grid uk-flex uk-flex-middle">
+								<div class="uk-width-1-2@s">
+
+									<article class="recipe-post recipe-post--ellipse-4 uk-margin-auto">
+										<figure class="recipe-post__img">
+											<img data-src="img/media/recipes/recipe-6.png" alt="Салат весенний" uk-img>
+										</figure>
+										<div class="recipe-post__content">
+											<div class="recipe-post__title">
+												<a href="">Домашний майонез за 5 минут</a>
+											</div>
+											<div class="recipe-post__short-desc">
+												Куриное яйцо, подсолнечное масло, сахар, соль, яблочный или винный уксус, горчица
+											</div>
+										</div>
+									</article>
+
+								</div>
+								<div class="uk-width-1-2@s">
+
+									<article class="recipe-post recipe-post--big recipe-post--ellipse-3">
+										<figure class="recipe-post__img">
+											<img data-src="img/media/recipes/recipe-7.png" alt="Вкусный омлет" uk-img>
+										</figure>
+										<div class="recipe-post__content">
+											<div class="recipe-post__title">
+												<a href="">
+													Салат с яйцом и авокадо</a>
+											</div>
+											<div class="recipe-post__short-desc">
+												Куриное яйцо, авокадо, салатный микс, подсолнечное/оливковое масло, соль, перец, лимонный сок
+											</div>
+											<a href="" class="green-link">Подробнее</a>
+										</div>
+									</article>
+
+								</div>
+							</div>
+						</div>
+
+						<div class="recipes-row">
+							<div class="uk-grid">
+								<div class="uk-width-1-2@s uk-width-1-3@m">
+
+									<article class="recipe-post recipe-post--ellipse-5">
+										<figure class="recipe-post__img">
+											<img data-src="img/media/recipes/recipe-10.png" alt="Салат весенний" uk-img>
+										</figure>
+										<div class="recipe-post__content">
+											<div class="recipe-post__title">
+												<a href="">Яйцо-пашот</a>
+											</div>
+											<div class="recipe-post__short-desc">
+												Куриное яйцо, вода, соль, уксус
+											</div>
+										</div>
+									</article>
+
+								</div>
+								<div class="uk-width-1-2@s uk-width-1-3@m">
+
+									<article class="recipe-post recipe-post--ellipse-6">
+										<figure class="recipe-post__img">
+											<img data-src="img/media/recipes/recipe-3.png" alt="Салат весенний" uk-img>
+										</figure>
+										<div class="recipe-post__content">
+											<div class="recipe-post__title">
+												<a href="">Творожный омлет</a>
+											</div>
+											<div class="recipe-post__short-desc">
+												Куриное яйцо, творог, молоко, зелень, соль, перец черный, масло сливочное
+											</div>
+										</div>
+									</article>
+
+								</div>
+								<div class="uk-width-1-2@s uk-width-1-3@m">
+
+									<article class="recipe-post recipe-post--ellipse-7">
+										<figure class="recipe-post__img">
+											<img data-src="img/media/recipes/recipe-5.png" alt="Салат весенний" uk-img>
+										</figure>
+										<div class="recipe-post__content">
+											<div class="recipe-post__title">
+												<a href="">Тот самый завтрак из детства</a>
+											</div>
+											<div class="recipe-post__short-desc">
+												Куриное яйцо, сосиски, зелень, соль, перец черный, масло сливочное
+											</div>
+										</div>
+									</article>
+
+								</div>
 							</div>
 						</div>
 					</div>
 
-					<div class="recipes-row">
-						<div class="uk-grid">
-							<div class="uk-width-1-2@s uk-width-1-3@m">
-
-								<article class="recipe-post recipe-post--ellipse-1">
-									<figure class="recipe-post__img">
-										<img data-src="img/media/recipes/recipe-1.png" alt="Салат весенний" uk-img>
-									</figure>
-									<div class="recipe-post__content">
-										<div class="recipe-post__title">
-											<a href="">Яйца скрэмбл с ветчиной и сыром</a>
-										</div>
-										<div class="recipe-post__short-desc">
-											Куриное яйцо, молоко, растительное масло, ветчина, сыр твердый, соль, перец
-										</div>
-									</div>
-								</article>
-
-							</div>
-							<div class="uk-width-1-2@s uk-width-1-3@m">
-
-								<article class="recipe-post recipe-post--ellipse-2">
-									<figure class="recipe-post__img">
-										<img data-src="img/media/recipes/recipe-4.png" alt="Салат весенний" uk-img>
-									</figure>
-									<div class="recipe-post__content">
-										<div class="recipe-post__title">
-											<a href="">Белковый омлет</a>
-										</div>
-										<div class="recipe-post__short-desc">
-											Яичный белок, молоко, укроп, соль, перец черный, масло сливочное
-										</div>
-									</div>
-								</article>
-
-							</div>
-							<div class="uk-width-1-2@s uk-width-1-3@m">
-
-								<article class="recipe-post recipe-post--ellipse-3">
-									<figure class="recipe-post__img">
-										<img data-src="img/media/recipes/recipe-8.png" alt="Салат весенний" uk-img>
-									</figure>
-									<div class="recipe-post__content">
-										<div class="recipe-post__title">
-											<a href="">Французские тосты</a>
-										</div>
-										<div class="recipe-post__short-desc">
-											Куриное яйцо, сахар, соль, молоко, белый хлеб, сливочное масло
-										</div>
-									</div>
-								</article>
-
-							</div>
-						</div>
-					</div>
-
-					<div class="recipes-row">
-						<div class="uk-grid uk-flex uk-flex-middle">
-							<div class="uk-width-1-2@s">
-
-								<article class="recipe-post recipe-post--ellipse-4 uk-margin-auto">
-									<figure class="recipe-post__img">
-										<img data-src="img/media/recipes/recipe-6.png" alt="Салат весенний" uk-img>
-									</figure>
-									<div class="recipe-post__content">
-										<div class="recipe-post__title">
-											<a href="">Домашний майонез за 5 минут</a>
-										</div>
-										<div class="recipe-post__short-desc">
-											Куриное яйцо, подсолнечное масло, сахар, соль, яблочный или винный уксус, горчица
-										</div>
-									</div>
-								</article>
-
-							</div>
-							<div class="uk-width-1-2@s">
-
-								<article class="recipe-post recipe-post--big recipe-post--ellipse-3">
-									<figure class="recipe-post__img">
-										<img data-src="img/media/recipes/recipe-7.png" alt="Вкусный омлет" uk-img>
-									</figure>
-									<div class="recipe-post__content">
-										<div class="recipe-post__title">
-											<a href="">
-												Салат с яйцом и авокадо</a>
-										</div>
-										<div class="recipe-post__short-desc">
-											Куриное яйцо, авокадо, салатный микс, подсолнечное/оливковое масло, соль, перец, лимонный сок
-										</div>
-										<a href="" class="green-link">Подробнее</a>
-									</div>
-								</article>
-
-							</div>
-						</div>
-					</div>
-
-					<div class="recipes-row">
-						<div class="uk-grid">
-							<div class="uk-width-1-2@s uk-width-1-3@m">
-
-								<article class="recipe-post recipe-post--ellipse-5">
-									<figure class="recipe-post__img">
-										<img data-src="img/media/recipes/recipe-10.png" alt="Салат весенний" uk-img>
-									</figure>
-									<div class="recipe-post__content">
-										<div class="recipe-post__title">
-											<a href="">Яйцо-пашот</a>
-										</div>
-										<div class="recipe-post__short-desc">
-											Куриное яйцо, вода, соль, уксус
-										</div>
-									</div>
-								</article>
-
-							</div>
-							<div class="uk-width-1-2@s uk-width-1-3@m">
-
-								<article class="recipe-post recipe-post--ellipse-6">
-									<figure class="recipe-post__img">
-										<img data-src="img/media/recipes/recipe-3.png" alt="Салат весенний" uk-img>
-									</figure>
-									<div class="recipe-post__content">
-										<div class="recipe-post__title">
-											<a href="">Творожный омлет</a>
-										</div>
-										<div class="recipe-post__short-desc">
-											Куриное яйцо, творог, молоко, зелень, соль, перец черный, масло сливочное
-										</div>
-									</div>
-								</article>
-
-							</div>
-							<div class="uk-width-1-2@s uk-width-1-3@m">
-
-								<article class="recipe-post recipe-post--ellipse-7">
-									<figure class="recipe-post__img">
-										<img data-src="img/media/recipes/recipe-5.png" alt="Салат весенний" uk-img>
-									</figure>
-									<div class="recipe-post__content">
-										<div class="recipe-post__title">
-											<a href="">Тот самый завтрак из детства</a>
-										</div>
-										<div class="recipe-post__short-desc">
-											Куриное яйцо, сосиски, зелень, соль, перец черный, масло сливочное
-										</div>
-									</div>
-								</article>
-
-							</div>
-						</div>
-					</div>
+					{% include "includes/components/pagination.twig"  %}
 
 				</section>
 				<!-- end recipes-section -->
