--- a/app/templates/includes/head.twig
+++ b/app/templates/includes/head.twig
@@ -16,8 +16,9 @@
 	<link rel="stylesheet" href="libs/uikit-3/css/uikit.min.css">
 	<link rel="stylesheet" href="libs/slick/slick.css">
 	<link rel="stylesheet" href="libs/slick/slick-theme.css">
-	<link rel="stylesheet" href="css/style.css">
-	<!--[if lte IE 9]>
+	<link
+	rel="stylesheet" href="css/style.css">
+<!--[if lte IE 9]>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 		<script src="libs/html5shiv.min.js"></script>
 		<script src="libs/placeholders.min.js"></script>
