--- a/app/css/style.css
+++ b/app/css/style.css
@@ -33,18 +33,18 @@ $desk-w: 960px;
 /*______ Icomoon ______*/
 
 @font-face {
-  font-family: 'icomoon';
+  font-family: "icomoon";
   src: url("../fonts/icomoon/icomoon.eot?7849wj");
   src: url("../fonts/icomoon/icomoon.eot?7849wj#iefix") format("embedded-opentype"), url("../fonts/icomoon/icomoon.ttf?7849wj") format("truetype"), url("../fonts/icomoon/icomoon.woff?7849wj") format("woff"), url("../fonts/icomoon/icomoon.svg?7849wj#icomoon") format("svg");
   font-weight: normal;
   font-style: normal;
-  font-display: block;
+  font-display: swap;
 }
 
 [class^="icon-"],
 [class*=" icon-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
-  font-family: 'icomoon' !important;
+  font-family: "icomoon" !important;
   speak: none;
   font-style: normal;
   font-weight: normal;
