--- a/app/sass/fonts/icomoon.scss
+++ b/app/sass/fonts/icomoon.scss
@@ -1,30 +1,32 @@
 @font-face {
-  font-family: 'icomoon';
-  src:  url('../fonts/icomoon/icomoon.eot?7849wj');
-  src:  url('../fonts/icomoon/icomoon.eot?7849wj#iefix') format('embedded-opentype'),
-    url('../fonts/icomoon/icomoon.ttf?7849wj') format('truetype'),
-    url('../fonts/icomoon/icomoon.woff?7849wj') format('woff'),
-    url('../fonts/icomoon/icomoon.svg?7849wj#icomoon') format('svg');
-  font-weight: normal;
-  font-style: normal;
-  font-display: block;
+	font-family: "icomoon";
+	src: url("../fonts/icomoon/icomoon.eot?7849wj");
+	src: url("../fonts/icomoon/icomoon.eot?7849wj#iefix")
+			format("embedded-opentype"),
+		url("../fonts/icomoon/icomoon.ttf?7849wj") format("truetype"),
+		url("../fonts/icomoon/icomoon.woff?7849wj") format("woff"),
+		url("../fonts/icomoon/icomoon.svg?7849wj#icomoon") format("svg");
+	font-weight: normal;
+	font-style: normal;
+	font-display: swap;
 }
 
-[class^="icon-"], [class*=" icon-"] {
-  /* use !important to prevent issues with browser extensions that change fonts */
-  font-family: 'icomoon' !important;
-  speak: none;
-  font-style: normal;
-  font-weight: normal;
-  font-variant: normal;
-  text-transform: none;
-  line-height: 1;
+[class^="icon-"],
+[class*=" icon-"] {
+	/* use !important to prevent issues with browser extensions that change fonts */
+	font-family: "icomoon" !important;
+	speak: none;
+	font-style: normal;
+	font-weight: normal;
+	font-variant: normal;
+	text-transform: none;
+	line-height: 1;
 
-  /* Better Font Rendering =========== */
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	/* Better Font Rendering =========== */
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
 .icon-clock:before {
-  content: "\e900";
+	content: "\e900";
 }
