правка страниц рецептов и детальной рецептов

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -3813,6 +3813,10 @@ nav.nav {
   -moz-transform: translateX(-50%);
   -ms-transform: translateX(-50%);
   transform: translateX(-50%);
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+  object-fit: cover;
 }
 
 .recipe-detail__text:last-child {
