--- a/app/sass/content/recipes-detail.scss
+++ b/app/sass/content/recipes-detail.scss
@@ -11,6 +11,9 @@
 			top: 0;
 			left: 50%;
 			transform: translateX(-50%);
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
 		}
 	}
 	&__text {
