--- a/app/templates/recipes.twig
+++ b/app/templates/recipes.twig
@@ -77,7 +77,7 @@
 
 									<article class="recipe-post recipe-post--ellipse-2">
 										<figure class="recipe-post__img">
-											<img data-src="img/media/recipes/recipe-4.png" alt="Салат весенний" uk-img>
+											<img data-src="img/media/recipes/recipe-12.jpg" alt="Салат весенний" uk-img>
 										</figure>
 										<div class="recipe-post__content">
 											<div class="recipe-post__title">
