--- a/app/css/style.css
+++ b/app/css/style.css
@@ -224,6 +224,29 @@ ol.numeric-list li:nth-child(4n):before {
   mask-image: url("../img/icon-svg/ellipse-3.svg");
 }
 
+.icon-chevron-right {
+  position: relative;
+  padding-right: 15px;
+  display: inline-block;
+  font-family: "Circe" !important;
+}
+
+.icon-chevron-right:after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  right: 0;
+  width: 8px;
+  height: 8px;
+  border: 1px solid #549537;
+  border-left: none;
+  border-top: none;
+  -webkit-transform: translateY(-50%) rotate(-45deg);
+  -moz-transform: translateY(-50%) rotate(-45deg);
+  -ms-transform: translateY(-50%) rotate(-45deg);
+  transform: translateY(-50%) rotate(-45deg);
+}
+
 /*______ COMPONENTS ______*/
 
 * + .btn {
@@ -1264,10 +1287,10 @@ ol.numeric-list li:nth-child(4n):before {
   -webkit-transform: translate3d(-50%, -50%, 0);
   -moz-transform: translate3d(-50%, -50%, 0);
   transform: translate3d(-50%, -50%, 0);
-  -webkit-transition: all .3s linear;
-  -o-transition: all .3s linear;
-  -moz-transition: all .3s linear;
-  transition: all .3s linear;
+  -webkit-transition: all 0.3s linear;
+  -o-transition: all 0.3s linear;
+  -moz-transition: all 0.3s linear;
+  transition: all 0.3s linear;
 }
 
 .preloader__indicator img {
@@ -1456,10 +1479,10 @@ body.is-loaded .main-nav li a img[src*="img/icon-svg"] {
 
 a {
   text-decoration: none;
-  -webkit-transition: all .3s linear;
-  -o-transition: all .3s linear;
-  -moz-transition: all .3s linear;
-  transition: all .3s linear;
+  -webkit-transition: all 0.3s linear;
+  -o-transition: all 0.3s linear;
+  -moz-transition: all 0.3s linear;
+  transition: all 0.3s linear;
 }
 
 a:hover {
@@ -1468,10 +1491,10 @@ a:hover {
 }
 
 svg {
-  -webkit-transition: fill .3s linear;
-  -o-transition: fill .3s linear;
-  -moz-transition: fill .3s linear;
-  transition: fill .3s linear;
+  -webkit-transition: fill 0.3s linear;
+  -o-transition: fill 0.3s linear;
+  -moz-transition: fill 0.3s linear;
+  transition: fill 0.3s linear;
 }
 
 .uk-container {
@@ -1506,7 +1529,7 @@ svg {
 
 .wave-bg:before,
 .wave-bg:after {
-  content: '';
+  content: "";
   position: absolute;
   left: 0;
   width: 100%;
@@ -4955,6 +4978,11 @@ main.main-container {
   color: #549537;
 }
 
+.custom-slider__text--small {
+  margin: 0 auto;
+  max-width: 525px;
+}
+
 .custom-slider--three-elements .slick-list {
   margin: 0 -20px;
 }
@@ -4977,6 +5005,11 @@ main.main-container {
 
 .custom-slider--three-elements .recipe-post__img:before {
   display: none !important;
+}
+
+.custom-slider .recipe-post--big {
+  max-width: 580px;
+  margin: 0 auto;
 }
 
 .wave-bg .slider .slide:before {
