--- a/app/sass/global/default.scss
+++ b/app/sass/global/default.scss
@@ -1,4 +1,3 @@
-
 .preloader {
 	position: fixed;
 	display: block;
@@ -16,7 +15,7 @@
 		top: 50%;
 		left: 50%;
 		transform: translate3d(-50%, -50%, 0);
-		transition: all .3s linear;
+		transition: all 0.3s linear;
 		img {
 			margin-bottom: 30px;
 		}
@@ -50,23 +49,20 @@
 	}
 }
 
-
 html,
 body,
 table {
-  font-family: $mainFont;
-  font-size: $fontSize;
-  line-height: $lineHeight;
-  font-weight: $fontWeight;
-  color: $tColor;
+	font-family: $mainFont;
+	font-size: $fontSize;
+	line-height: $lineHeight;
+	font-weight: $fontWeight;
+	color: $tColor;
 }
-
 
 body {
 	overflow-x: hidden;
 	@each $theme, $color in $theme-colors {
 		&.#{$theme} {
-
 			.advantages-list {
 				li {
 					&:before {
@@ -119,65 +115,64 @@ body {
 }
 
 * {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 a {
-  text-decoration: none;
-  transition: all .3s linear;
-  &:hover {
-  	color: $btColor;
-    text-decoration: none;
-  }
+	text-decoration: none;
+	transition: all 0.3s linear;
+	&:hover {
+		color: $btColor;
+		text-decoration: none;
+	}
 }
 
 svg {
-  transition: fill .3s linear;
+	transition: fill 0.3s linear;
 }
 
 .uk-container {
-  margin: 0 auto;
-  max-width: $containerWidth;
-  box-sizing: border-box;
-  &--small {
-  	max-width: $containerWidthSmall;
-  }
-  &--medium {
-  	max-width: $containerWidthMedium;
-  }
-  &--large {
-  	max-width: $containerWidthLarge
-  }
-  @media (min-width: $mob-xs) {
-  	padding: 0 15px;
-  };
-  @media (min-width: $tablet-w) {
-  	padding: 0 30px;
-  };
+	margin: 0 auto;
+	max-width: $containerWidth;
+	box-sizing: border-box;
+	&--small {
+		max-width: $containerWidthSmall;
+	}
+	&--medium {
+		max-width: $containerWidthMedium;
+	}
+	&--large {
+		max-width: $containerWidthLarge;
+	}
+	@media (min-width: $mob-xs) {
+		padding: 0 15px;
+	}
+	@media (min-width: $tablet-w) {
+		padding: 0 30px;
+	}
 }
 
 .uk-grid {
 	@media (min-width: $mob-xs) {
 		margin-left: -15px;
-	};
+	}
 	@media (min-width: $tablet-w) {
 		margin-left: -30px;
-	};
-	&>* {
+	}
+	& > * {
 		@media (min-width: $mob-xs) {
 			padding-left: 15px;
-		};
+		}
 		@media (min-width: $tablet-w) {
 			padding-left: 30px;
-		};
+		}
 	}
 }
-
 
 .padding-left-25 {
 	@media (min-width: $desk-w) {
 		padding-left: 25%;
-	};
+	}
 }
 
 .small-container {
@@ -191,13 +186,14 @@ svg {
 	@media (min-width: $mob-xs) {
 		margin-bottom: 160px !important;
 		padding: 60px 0;
-	};
+	}
 	@media (min-width: $desk-w) {
 		padding: 70px 0;
 		margin-bottom: 170px !important;
-	};
-	&:before,&:after {
-		content: '';
+	}
+	&:before,
+	&:after {
+		content: "";
 		position: absolute;
 		left: 0;
 		width: 100%;
@@ -209,14 +205,14 @@ svg {
 	}
 	&:before {
 		background-position: 100% 100%;
-		background-image: url('../img/ui/wave-top.png');
+		background-image: url("../img/ui/wave-top.png");
 		top: 0;
 		transform: translateY(0);
 	}
 	&:after {
 		background-position: 0 0;
 		bottom: 0;
-		background-image: url('../img/ui/wave-bottom.png');
+		background-image: url("../img/ui/wave-bottom.png");
 		transform: translateY(0);
 	}
 }
@@ -235,7 +231,8 @@ svg {
 }
 
 @keyframes move-wave {
-	0%,100% {
+	0%,
+	100% {
 		background-position: 0 0;
 	}
 	50% {
