добавил текст на страницу про курицу

--- a/app/templates/includes/components/advantages-section.twig
+++ b/app/templates/includes/components/advantages-section.twig
@@ -413,7 +413,7 @@
 									<br>
 									привлекательная
 									<br>
-									цена</div>
+									цена в сравнении с бройлером</div>
 								<div class="text"></div>
 							</div>
 						</div>
