add new img chickens

--- a/app/templates/chicken.twig
+++ b/app/templates/chicken.twig
@@ -4,7 +4,7 @@
 {% 
 	set data = {
 		bgURL: {
-			desk: 'img/media/main-banner-6-1440x730.png',
+			desk: 'img/media/test-banner-4.jpg',
 			tablet: 'img/media/main-banner-6-960x487-tablet.png',
 			mob: 'img/media/main-banner-6-640x325-mob-xs.png'
 		},
@@ -12,7 +12,7 @@
 		subtitle: 'Легкий и полезный продукт для поддержки здоровья',
 		flyBox: {
 			isset: true,
-			img: 'img/media/chicken-meat-box.png'
+			img: 'img/media/chicken-meat-box-2.jpg'
 		}
 	} 
 %}
