--- a/app/templates/includes/components/advantages-section.twig
+++ b/app/templates/includes/components/advantages-section.twig
@@ -442,7 +442,7 @@
 					<svg width="100%" height="100%" class="yellow-ellipse-2">
 						<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#yellow-ellipse-4"></use>
 					</svg>
-					<img src="img/media/advantage-img/chicken-meat-box.png" alt="">
+					<img src="img/media/advantage-img/chicken-meat-box-2.jpg" alt="">
 				</div>
 			</div>
 		</div>
