--- a/app/templates/includes/components/typebox-section.twig
+++ b/app/templates/includes/components/typebox-section.twig
@@ -289,7 +289,7 @@
 							</svg>
 						</div>
 						<div class="content-img">
-							<img data-src="img/media/box-type-19.png" alt="" uk-img>
+							<img data-src="img/media/box-type-20.jpg" alt="" uk-img>
 						</div>
 					</div>
 					<div class="item__text">
